# zero2prod

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  configuration.json  docker-compose.yml
configuration/: base.json
migrations/: 20240713173749_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/database/: basic.rs
src/database/postgres/: mod.rs  pool.rs  query.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: greet.rs  health_check.rs  subscriptions.rs
tests/: health_check.rs
